kubernetes/apps/quiz/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz
  namespace: quiz
spec:
  selector:
    app: quiz
  ports:
    - name: http
      port: 3000
      targetPort: http
