kubernetes/apps/quiz/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quiz
  namespace: quiz
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "quiz.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: quiz
          port: 3000
